<resources>
    <!-- Application -->
    <string name="app_name">PunchIn</string>

    <!-- Login Page -->
    <string name="title_activity_login">Login</string>
    <string name="login_username_input">USERNAME OR EMAIL</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_input">PASSWORD</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="register_prompt">Not Registered Yet?\nSign-Up Here</string>
    <string name="signin_button_text">Sign In</string>

    <!-- Login Page -->
    <string name="title_activity_register">Register</string>
    <string name="register_username_input">USERNAME</string>
    <string name="register_email_input">EMAIL</string>
    <string name="register_password_input">PASSWORD</string>
    <string name="register_password_confirmation_input">CONFIRM PASSWORD</string>
    <string name="register_button_text">Register</string>
    <string name="return_button_text">Return</string>

    <!-- Goals Page -->
    <string name="update_button_text">Update</string>
    <string name="title_activity_goals">Goals</string>
    <string name="points">POINTS</string>
    <string name="min_goals_input_title">MINIMUM HOURS GOAL:</string>
    <string name="max_goals_input_title">MAXIMUM HOURS GOAL:</string>

    <!-- Timesheet View Page -->
    <string name="title_activity_timesheet_view">Timesheet View</string>
    <string name="weekly_selection_text">7 – 14, March 2024</string>
    <string name="date_most_recent_text">Today, 14 March</string>
    <string name="fab_add_timesheet">FAB to add timesheets</string>
    <string name="MONDAY">Monday</string>
    <string name="TUESDAY">Tuesday</string>
    <string name="WEDNESDAY">Wednesday</string>
    <string name="THURSDAY">Thursday</string>
    <string name="FRIDAY">Friday</string>
    <string name="SATURDAY">Saturday</string>
    <string name="SUNDAY">Sunday</string>

    <!-- Timesheet Creation Page -->
    <string name="title_activity_timesheet_creation">Timesheet Entry</string>
    <string name="toggle_button_off">Timer</string>
    <string name="toggle_button_on">Stopwatch</string>
    <string name="hint_timesheet_name">Enter timesheet name…</string>
    <string name="hint_timesheet_project_name">Enter project name…</string>
    <string name="hint_timesheet_start_date">Select start date…</string>
    <string name="hint_timesheet_description">Enter timesheet description…</string>
    <string name="hint_timesheet_photo">Add timesheet photo…</string>
    <string name="button_timesheet_return">Return</string>
    <string name="button_timesheet_add">Add</string>
    <string name="default_start_time">00:00</string>
    <string name="default_end_time">00:00</string>
    <string name="timesheet_add_image_text">Press to Add Photo</string>

    <!-- Project Creation Page -->
    <string name="title_activity_project_creation">PROJECT ENTRY</string>
    <string name="hint_project_name">Enter project name…</string>
    <string name="hint_organization_name">Enter Organization Name…</string>
    <string name="hint_start_date">Enter Start Date…</string>

    <string name="hint_set_colour">Press to change project colour...</string>
    <string name="hint_enter_hourly_rate">Enter Hourly Rate…</string>
    <string name="hint_enter_description">Enter Description…</string>

    <string name="hint_set_colour">Set colour…</string>
    <string name="hint_enter_hourly_rate">Enter hourly rate…</string>
    <string name="hint_enter_description">Enter description…</string>

    <string name="button_project_return">RETURN</string>
    <string name="button_project_add">ADD</string>
    <string name="title_activity_projectcreation">Project Creation</string>

    <!-- Projects Details Page -->
    <string name="title_activity_project_details">PROJECT DETAILS</string>
    <string name="project_name_activity_project_details">PROJECT NAME INSERT</string>
    <string name="project_details_hours">HOURS</string>
    <string name="project_details_time_sheets">TIME SHEETS</string>
    <string name="project_details_rate">RATE</string>
    <string name="project_details_earnings">EARNINGS</string>
    <string name="project_details_colour">COLOUR</string>
    <string name="project_details_organization">ORGANIZATION</string>
    <string name="project_details_timeseheet_title">TIME SHEETS</string>
    <string name="project_details_descrption">DESCRIPTION</string>
    <string name="project_details_return">RETURN</string>

    <!-- Projects View Page -->
    <string name="activity_project_view_title">PROJECTS</string>
    <string name="activity_project_view_button_alphabet">A-Z</string>
    <string name="activity_project_view_button_date">Date</string>
    <string name="title_activity_project_view">Project view</string>

    <string name="activity_project_view_button_start">Start Date</string>
    <string name="activity_project_view_button_end">End Date</string>
    <string name="activity_project_view_button_sort">Sort</string>
  


    <!-- Analytics Page -->
    <string name="title_analytics">ANALYTICS</string>
    <string name="title_hours">HOURS RECORD</string>
    <string name="filter_date_text">Date</string>
    <string name="filter_projects_text">Projects</string>
    <string name="filter_clients_text">Clients</string>
    <string name="total_hours">TOTAL</string>
    <string name="billable_hours">BILLABLE</string>
    <string name="amount">AMOUNT</string>
    <string name="hoursValue">32:02:43</string>
    <string name="billableHoursValue">10:49:49</string>
    <string name="currencyValue">4534.32</string>
    <string name="currency">zar</string>


    <!-- Settings Page -->
    <string name="title_activity_settings">Settings</string>
    <string name="signout_button_text">Sign Out</string>

</resources>