<?xml version="1.0" encoding="utf-8"?>
<!--
AUTHOR: Leonard Bester
CREATED: 29/04/2024
LAST MODIFIED: 01/05/2024
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ProjectDetailsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <TextView
        android:id="@+id/tv_Title"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/staatliches"
        android:text="@string/title_activity_project_details"
        android:textAlignment="center"
        android:textColor="@color/indigo_900"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="551dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Title">



        <!-- Project Name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/staatliches"
                android:text="@string/project_name_activity_project_details"
                android:textAlignment="center"
                android:textColor="@color/indigo_300"
                android:textSize="33dp" />

            <ImageView
                android:layout_width="368dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#73798a" />
        </LinearLayout>

        <!-- Hours and Time Sheets -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/tv_TotalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity=""
                    android:fontFamily="@font/staatliches"
                    android:text="@string/project_details_hours"
                    android:textColor="@color/indigo_900"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tv_BillableHoursLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text="@string/project_details_time_sheets"
                    android:textColor="@color/indigo_900"
                    android:textSize="19sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_Hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text=""
                    android:textColor="@color/dark_blue_900"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tv_Time_Sheets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text=""
                    android:textColor="@color/dark_blue_900"
                    android:textSize="19sp" />
            </TableRow>

            <ImageView
                android:layout_width="370dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#73798a" />
        </TableLayout>


        <!-- Rate and Earnings -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text="@string/project_details_rate"
                    android:textColor="@color/indigo_900"
                    android:textSize="19sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text="@string/project_details_earnings"
                    android:textColor="@color/indigo_900"
                    android:textSize="19sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text=""
                    android:textColor="@color/dark_blue_900"
                    android:textSize="19sp" />

                <TextView
                    android:id="@+id/tv_earnings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text=""
                    android:textColor="@color/dark_blue_900"
                    android:textSize="19sp" />
            </TableRow>

            <ImageView
                android:layout_width="370dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#73798a" />
        </TableLayout>

        <!-- Colour and Organization -->
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text="@string/project_details_colour"
                    android:textColor="@color/indigo_900"
                    android:textSize="19sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_colour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/staatliches"
                    android:text=""
                    android:textColor="@color/dark_blue_900"
                    android:textSize="19sp" />
            </TableRow>

            <ImageView
                android:layout_width="370dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#73798a" />
        </TableLayout>

        <!-- Time Sheet Display -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="142dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:fontFamily="@font/staatliches"
                android:text="@string/project_details_timeseheet_title"
                android:textAlignment="center"
                android:textColor="@color/indigo_900"
                android:textSize="25dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="106dp">

                <TextView
                    android:id="@+id/tv_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/staatliches"
                    android:text=""
                    android:textColor="@color/dark_blue_900"
                    android:textSize="14sp" />
            </ScrollView>

        </LinearLayout>

        <!-- Line -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="#73798a" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/staatliches"
                android:text="@string/project_details_descrption"
                android:textColor="@color/dark_blue_900"
                android:textSize="15dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="380dp"
                android:layout_height="84dp"
                android:layout_gravity="center"
                android:fontFamily="@font/reglo_bold"
                android:text=""
                android:textColor="@color/dark_blue_900"
                android:elevation="2dp"
                android:background="@drawable/rectangle_wrapper_white_sharp_corners" />
        </LinearLayout>



    </LinearLayout>
    <Button
        android:id="@+id/btn_Return"
        android:layout_width="215dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectangle_wrapper_medium_blue"
        android:text="@string/project_details_return"
        android:textColor="@color/white_A700"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <!--//______________________....oooOO0_END_OF_FILE_0OOooo....______________________\\-->