<?xml version="1.0" encoding="utf-8"?>
<!--
AUTHOR: Ethan Schoonbee
CREATED: 23/04/2024
LAST MODIFIED: 24/04/2024
-->

<!-- Page Layout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <!-- Background Wave Vector -->
    <ImageView
        android:id="@+id/img_BackgroundWave"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="130dp"
        android:scaleType="fitXY"
        android:src="@drawable/background_wave_dark_blue"
        tools:ignore="ContentDescription" />

    <!-- Logo Vector -->
    <ImageView
        android:id="@+id/img_Logo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_logo_full"
        tools:ignore="ContentDescription" />

    <!-- Guide Object -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38"/>

    <!-- Login Wrapper Block -->
    <LinearLayout
        android:id="@+id/ll_LoginWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="320dp"
        android:minWidth="320dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="@id/guideline_Bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rectangle_wrapper_white_round_corners">

        <!-- Login Title -->
        <TextView
            android:id="@+id/tv_LoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50sp"
            android:fontFamily="@font/staatliches"
            android:textColor="@color/dark_blue_900"
            android:text="@string/title_activity_login" />

        <!-- Username InputBox -->
        <LinearLayout
            android:id="@+id/ll_UsernameInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:background="@drawable/rectangle_wrapper_light_blue"
            android:elevation="2dp">

            <!-- User Icon Vector -->
            <ImageView
                android:id="@+id/img_UsernameIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="6dp"
                android:src="@drawable/user_icon"/>

            <!-- Username Input -->
            <EditText
                android:id="@+id/et_EmailOrUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:fontFamily="@font/reglo_bold"
                android:background="@drawable/rectangle_wrapper_light_blue"
                android:pointerIcon="text"
                android:textSize="18sp"
                android:textColorHint="@color/blue_gray_50"
                android:hint="@string/login_username_input"/>

        </LinearLayout>

        <!-- Password InputBox -->
        <LinearLayout
            android:id="@+id/ll_PasswordInputBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:background="@drawable/rectangle_wrapper_light_blue"
            android:elevation="2dp">

            <!-- Lock Icon Vector -->
            <ImageView
                android:id="@+id/img_PasswordIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/password_icon" />

            <!-- Password Input -->
            <EditText
                android:id="@+id/et_Password"
                android:layout_width="210dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:fontFamily="@font/reglo_bold"
                android:background="@drawable/rectangle_wrapper_light_blue"
                android:pointerIcon="text"
                android:textSize="18sp"
                android:textColorHint="@color/blue_gray_50"
                android:inputType="textPassword"
                android:hint="@string/login_password_input" />

            <ImageView
                android:id="@+id/img_TogglePassword"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="6dp"
                android:src="@drawable/eye_closed"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>



        <!-- Sign-In Button -->
        <LinearLayout
            android:id="@+id/ll_SignInButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="45dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal"
            android:background="@drawable/rectangle_wrapper_light_green"
            android:elevation="2dp">

            <!-- Button Text -->
            <TextView
                android:id="@+id/tv_SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:fontFamily="@font/reglo_bold"
                android:pointerIcon="hand"
                android:text="@string/signin_button_text"
                android:textColor="@color/white_A700"
                android:textAlignment="center"
                android:textSize="32sp" />

        </LinearLayout>

    </LinearLayout>

    <!-- Register Button -->
    <TextView
        android:id="@+id/tv_RegisterPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_LoginWrapper"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/reglo_bold"
        android:textAlignment="center"
        android:textColor="@color/white_A700"
        android:textSize="25sp"
        android:text="@string/register_prompt"/>

</androidx.constraintlayout.widget.ConstraintLayout>
<!--//______________________....oooOO0_END_OF_FILE_0OOooo....______________________\\-->